# ZSEHackathon2018

./: .gitignore  App.cpp  App.hpp  AudioNoob.cpp  AudioNoob.hpp  CMakeLists.txt  Hallayeah.cpp  Hallayeah.hpp  Handler.cpp  Handler.hpp  JSAudioNoob.cpp  JSAudioNoob.hpp  JSWAVFile.cpp  JSWAVFile.hpp  JSWAVHelper.cpp  JSWAVHelper.hpp  OSXHelper.h  OSXHelper.mm  RefWAVFile.cpp  RefWAVFile.hpp  WAVHelper.cpp  WAVHelper.hpp  index.html  main.cpp
AudioNoob.xcodeproj/: project.pbxproj
AudioNoob.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AudioNoob.xcodeproj/project.xcworkspace/xcuserdata/bgrzesik.xcuserdatad/: UserInterfaceState.xcuserstate
AudioNoob.xcodeproj/xcuserdata/bgrzesik.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/Resources/: config.rb  index.html
macos/Resources/css/: gridstack.css  style.css
macos/Resources/scss/: style.scss
